2005-06-24  Sven Neumann  <sven@gimp.org>

	* app/core/gimppdbprogress.[ch]: removed an incomplete and unused
	function.

2005-06-24  Sven Neumann  <sven@gimp.org>

	* app/pdb/procedural_db.c (procedural_db_execute): if we end up
	without any return values, assume an execution error instead of
	crashing (bug #308904).

2005-06-24  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c (cdisplay_lcms_get_display_profile):
	increased maximum property size, added debug output.

2005-06-24  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c: implement the configure method and tell
	the user where this module can be configured.

2005-06-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/png.c: some code cleanup, no real changes. 

2005-06-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/png.c (save_image): 
	* app/dialogs/preferences-dialog.c: added a check button to control
	the "display-profile-from-gdk" option.

	* modules/cdisplay_lcms.c (cdisplay_lcms_get_display_profile):
	fixed use of gdk_property_get(). Return NULL if no display profile
	can be obtained.

2005-06-24  Sven Neumann  <sven@gimp.org>

	Added basic support for the proposed ICC Profiles In X Specification
	(http://burtonini.com/temp/xicc-specification-0.1.html).
	
	* libgimpconfig/gimpcolorconfig.[ch]: added a configuration option
	"display-profile-from-gdk", default to TRUE.

	* modules/cdisplay_lcms.c: try to retrieve the display color
	profile from the "_ICC_PROFILE" property on the default screen.

2005-06-23  Akkana Peck  <akkana@shallowsky.com>

	* app/actions/plug-in-actions.c
	* menus/image-menu.xml.in
	* plug-ins/Lighting/lighting_main.c
	* plug-ins/common/apply_lens.c
	* plug-ins/common/convmatrix.c
	* plug-ins/common/depthmerge.c
	* plug-ins/common/film.c
	* plug-ins/common/flarefx.c
	* plug-ins/common/glasstile.c
	* plug-ins/common/lic.c
	* plug-ins/common/nova.c
	* plug-ins/common/sparkle.c
	* plug-ins/common/vpropagate.c
	* plug-ins/gflare/gflare.c