@@ -53,7 +53,7 @@ image_properties_dialog_new (GimpImage *image,
   dialog = gimp_viewable_dialog_new (GIMP_VIEWABLE (image),
                                      _("Image Properties"),
                                      "gimp-image-properties",
-                                     GIMP_STOCK_INFO,
+                                     GTK_STOCK_PROPERTIES,
                                      _("Image Properties"),
                                      parent,
                                      gimp_standard_help_func,
